Fix command parsing in %runscript
Add -c argument to ensure commands are properly parsed

--- a/Singularity.v3.8-torch1.7.0-dj0.12.7
+++ b/Singularity.v3.8-torch1.7.0-dj0.12.7
@@ -67,7 +67,7 @@ MAINTAINER Christoph Blessing <chris24.blessing@gmail.com>
     export SHELL=/bin/sh
 
 %runscript
-    exec /bin/sh "$@"
+    exec /bin/sh -c "$@"
 
 %startscript
     jupyter lab
